--- a/style.css
+++ b/style.css
@@ -1,12 +1,116 @@
+/* Common Style */
+main{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+body{
+    background: #F3F1FF;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
+    /* width: 80%; */
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+}
+.top-players{
+    margin-bottom: 30px;
+}
+hr{
+    border: 1px solid #d1d1d1;
+    margin-bottom: 27px;
+}
+
+/* Top Player section Design */
+
+.top-players{
+    /* background: #FFFFFF; */
+    padding: 30px;
+    
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 30px;
+    
 }
 .player{
     display: flex;
     text-align: center;
+    
 }
 .player img{
     width: 56px;
     height: 56px;
 }
+
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+/* Top Blogs styles */
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+/* .top-blogs{
+    margin-bottom: 30px;
+} */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+
+}
+
+/* Latest Course Style */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+
