--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ hr{
 .player{
     display: flex;
     text-align: center;
-    
+    align-items: center;
 }
 .player img{
     width: 56px;
@@ -114,3 +114,35 @@ hr{
     color: #AEAEAE;
 }
 
+/* ---------------
+Media Queries 
+-------------------*/
+
+/* Mobile Devices */
+@media (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
+}
+
+/* Tablet Devices */
+
+@media (min-width: 688px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
